fix text overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -103,7 +103,7 @@
 .troughText {
     margin-top: 0;
     padding-top: 0;
-    width: 1rem;
+    width: 2rem;
     text-align: end;
     overflow: hidden;
     font-size: 1.75rem;
